--- a/src/public/pages/report/styles/report.css
+++ b/src/public/pages/report/styles/report.css
@@ -64,7 +64,7 @@
     justify-content: center;
     align-items: center;
     gap: 5px;
-    margin-top: 40px;
+    margin-top: 60px;
     width: 90%;
     background-color: var(--primary-color);
     border-radius: 10px;
